# activity_recognition_ros

./: CMakeLists.txt  README.md  package.xml
include/activity_recognition_ros/: activity_recognition.h  human.h
src/: activity_recognition.cpp  activity_recognition_node_sub.cpp  human.cpp
